New branch for initial report - updated team member names

--- a/initial_report_latex/Initial report.tex
+++ b/initial_report_latex/Initial report.tex
@@ -3,8 +3,7 @@
 
 
 \title{\textbf{Initial Report of a Distributed Chat Application}}
-\author{\textbf{Team Zero members:} \\
-		Li, Zhiheng  
+\author{\textbf{Team Zero members:} 
 		\\Zulean, Tiberiu Iustin 
 		\\Darwish, Emad Mahmoud Nagui 
 		\\ Esener, Iris
