update file to test git use

--- a/initial_report_latex/Aims.tex
+++ b/initial_report_latex/Aims.tex
@@ -1,9 +1,9 @@
 \begin{enumerate}
-\item numbered aims example 1
-\item numbered aims example 2
+\item 
+\item 
 \end{enumerate}
 
 \begin{itemize}
-\item bulletpoint example 1
-\item bulletpoint example 2
+\item 
+\item 
 \end{itemize}
