--- a/initial_report_latex/Aims.tex
+++ b/initial_report_latex/Aims.tex
@@ -1,9 +1,9 @@
 \begin{enumerate}
-\item 
-\item 
+\item numbered aims example 1
+\item numbered aims example 2
 \end{enumerate}
 
 \begin{itemize}
-\item 
-\item 
+\item bulletpoint example 1
+\item bulletpoint example 2
 \end{itemize}
