--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="click_to_register_text"> Not a user yet? Click below to register </string>
     <string name="registration_text"> Please fill the information below correctly </string>
     <string name="no_chats_found_text"> No chats open so far! </string>
+    <string name="search_text"> Search chat </string>
 </resources>
