--- a/initial_report_latex/Collaboration.tex
+++ b/initial_report_latex/Collaboration.tex
@@ -3,4 +3,7 @@ Methods of team collaboration:
 \item Weekly meetings for discussion and planning
 \item Whatsapp group chat for communication
 \item Google docs for document draft and brainstorm collaboration
+\item Trello for task management
+\item Git and GitHub for software development version control
+\item Occasional pair programming 
 \end{itemize}
