--- a/initial_report_latex/ConflictHandling.tex
+++ b/initial_report_latex/ConflictHandling.tex
@@ -1,1 +1,1 @@
-How we plan to handle conflicts blah blah
+Having agreed to equally share the allocated points for the project, we believe all members are equally invested in the quality of the project. All members of the team have agreed that should there be a conflict, we will resolve it peacefully with each other and take democratic votes when required. In the case that it is absolutely necessary, an outsiders opinion may be sought. 
