--- a/initial_report_latex/Initial report.tex
+++ b/initial_report_latex/Initial report.tex
@@ -1,9 +1,13 @@
 \documentclass[11pt,openright,a4paper]{article}
 \usepackage[margin=1in,footskip=0.25in]{geometry}
+\usepackage{enumitem}
+\usepackage{nameref}
+\setlength{\parskip}{3mm minus 1mm}
+\usepackage{pdfpages}
 
 
 \title{\textbf{Initial Report of a Distributed Chat Application}}
-\author{\textbf{Team Zero members:} 
+\author{\textbf{Team Zero members:} \\
 		\\Zulean, Tiberiu Iustin 
 		\\Darwish, Emad Mahmoud Nagui 
 		\\ Esener, Iris
