--- a/initial_report_latex/Progress.tex
+++ b/initial_report_latex/Progress.tex
@@ -1,1 +1,18 @@
-(our progress so far .... )
+So far we have determined the architecture for our system and database (may be subject to minor changes in future iterations), and implemented the bare bones of server and client applications. 
+
+Figure \ref{dbfig} below shows the structure of the database that will be stored server side.
+
+\begin{figure}[h]
+\includegraphics[width=\linewidth]{db.png}
+\caption{Database structure}
+\label{dbfig}
+\end{figure}
+
+Our progress on development can be seen by the following Gantt chart (figure \ref{schedulefig}), which illustrates our work allocations so far.  
+
+
+\begin{figure}[h]
+\includegraphics[width=\linewidth]{gantt.jpeg}
+\caption{Schedule so far}
+\label{schedulefig}
+\end{figure}
