--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="message_box_hint_text"> Type your message </string>
     <string name="search_users_hint_text"> Type username to start a new chat with </string>
     <string name="search_users_suggestive_text"> Type in the box down below to search for a user to chat with </string>
+    <string name="settings_menu_text"> Settings </string>
+    <string name="sign_out_text"> Sign Out </string>
+    <string name="unregister_text"> Unregister </string>
 </resources>
