Implemented local database (chat list table with associated CRUD operations) and additon and deletion of chats from chat list

--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="settings_menu_text"> Settings </string>
     <string name="sign_out_text"> Sign Out </string>
     <string name="unregister_text"> Unregister </string>
+    <string name="profile_picture_text"> Profile picture </string>
+    <string name="delete_all_chats_text"> Delete all chats </string>
 </resources>
