final draft of initial report

--- a/initial_report_latex/Roles.tex
+++ b/initial_report_latex/Roles.tex
@@ -2,6 +2,6 @@ Although all members are free to help out in any area of development, we have ta
 
 \begin{itemize}
 \item Zhuoling Li: Web client application
-\item Tiberiu: Android client application
-\item Iris and Emad: Server application and database development / deployment
+\item Tiberiu Zulean: Android client application
+\item Iris Esener and Emad Darwish: Server application and database development / deployment
 \end{itemize}
