--- a/initial_report_latex/Schedule.tex
+++ b/initial_report_latex/Schedule.tex
@@ -1,1 +1,9 @@
-(Approximate schedule for the remainder of the project...)
+Our current schedule estimates are as follows:
+
+Priority 1 aims - Complete by November 30, 2019
+
+Priority 2 aims - Complete by December 14, 2019
+
+Priority 3 aims - Complete by January 31, 2020
+
+Priority 4 aims (if time) and final testing/debugging - Complete by February 29, 2020
