--- a/initial_report_latex/Aims.tex
+++ b/initial_report_latex/Aims.tex
@@ -1,8 +1,9 @@
 
 \begin{enumerate}
-\item Priority 1 (bare bones)
+\item Priority 1
 \begin{enumerate}[label*=\arabic*.]
-\item Clients register with the server - client details are saved in the database.
+\item Clients register with the server - client details are saved in the database. 
+
 \item Registered clients can login, and once authenticated can do the following:
 \begin{enumerate}[label*=\arabic*.]
 \item Clients can search for other clients in the system, also see the status of other clients (e.g. online, offline and busy).
@@ -17,33 +18,32 @@
 \end{enumerate}
 \end{enumerate}
 \end{enumerate}
-
 \item Priority 2
 \begin{enumerate}[label*=\arabic*.]
 \item  Group chat functionality - a client can initiate a chat and send messages to a group of more than one client.
 \begin{enumerate}[label*=\arabic*.]
 \item The recipients will automatically be placed in the group chat until they choose to leave.
 \end{enumerate}
-\item Message storage and retrieval - chat information is stored in the database, and history can be retrieved on request.
-\begin{enumerate}[label*=\arabic*.]
-\item Text messages can be of arbitrary size.
-
-\item Recent messages (e.g. messages sent after a week ago) cached locally for quick request.
-
-\end{enumerate}
+\item To send an email on registration to validate email address
 \end{enumerate}
 \item Priority 3 (implemented last)
 \begin{enumerate}[label*=\arabic*.]
-
 \item End to end encryption - to be implemented on the clients, so the server cannot intercept or decrypt messages.
 \begin{enumerate}[label*=\arabic*.]
 \item Public key encryption to determine shared keys between 2 clients.
 \item Symmetric encryption with shared keys to encrypt and decrypt messages between 2 clients.
 \item Keys to be kept in clients local storage only.
 \end{enumerate}
+\item Message storage and retrieval - chat information is stored in the database, and history can be retrieved on request.
+\begin{enumerate}[label*=\arabic*.]
+\item Text messages can be of arbitrary size.
+\item Recent messages (e.g. messages sent within the last week) cached locally for quick request.
+\end{enumerate}
+
 \end{enumerate}
 \item Priority 4 (optional)
 \begin{enumerate}[label*=\arabic*.]
+\item User and group avatars/pictures
 \item Multimedia messages - besides plain text, message such as pictures, emoji and voice record can be sent.
 \item Message status - clients can see if their messages are received or read and also see  typing status of other clients.
 \item QR code for adding new friends - rather than search by user name, clients can find another clients quickly after scanning their QR code.
