--- a/initial_report_latex/Initial report.tex
+++ b/initial_report_latex/Initial report.tex
@@ -1,10 +1,9 @@
-\documentclass[11pt,openright,a4paper]{article}
+\documentclass[11pt]{article}
 \usepackage[margin=1in,footskip=0.25in]{geometry}
 \usepackage{enumitem}
 \usepackage{nameref}
 \setlength{\parskip}{3mm minus 1mm}
 \usepackage{pdfpages}
-
 
 \title{\textbf{Initial Report of a Distributed Chat Application}}
 \author{\textbf{Team Zero members:} \\
@@ -14,13 +13,10 @@
 		\\ Li, Zhuoling
 }
 
-
 \date{November 18, 2019}
-
 
 \begin{document}
 \pagenumbering{arabic}
-
 
 \maketitle
 
@@ -30,13 +26,12 @@
 \addtocounter{section}{1}
 \label{part1}
 
-
 \subsection{Aims}
 \label{aims}
 
 \input{Aims.tex}
 
-\subsection{Progress so far}
+\subsection{Progress so far (November 18, 2019)}
 \label{progress}
 
 \input{Progress.tex}
@@ -49,7 +44,6 @@
 \section*{Part 2 - Project Organization}
 \addtocounter{section}{1}
 \label{part2}
-
 
 \subsection{Team collaboration}
 \label{collaboration}
